# random-word-api-landing

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  netlify.toml
.github/workflows/: deploy.yml
src/: app.rs  main.rs  model.rs
src/css/: tailwind.css
